<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingStart="16dp"
    android:paddingTop="86dp"
    android:paddingEnd="16dp"
    android:paddingBottom="66dp"
    tools:context="com.app.jetpackmoviecatalogue.ui.main.favorite.FavFragment"
    tools:itemCount="5"
    tools:listitem="@layout/item_content">

</androidx.recyclerview.widget.RecyclerView>
