...
                app:layout_constraintStart_toEndOf="@+id/sub_section_movies"
                app:layout_constraintTop_toTopOf="@+id/sub_section_movies" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/fav_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
...
